--- a/package.json
+++ b/package.json
@@ -6,8 +6,20 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
         "axios": "^1.1.2",
+        "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.8.0",
+        "sass": "^1.56.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^4.4.0",
+        "path": "^0.12.7",
+        "sass": "^1.69.4",
+        "update": "^0.7.4",
+        "vue": "^3.2.36",
+        "vue-router": "^4.2.5",
+        "vuex": "^4.0.2"
     }
 }
